2024-09-30  Ulrich Müller  <ulm@gentoo.org>

	* test/ebuild-mode-tests.el (ebuild-mode-test-run-with-fixed-time):
	* test/glep-mode-tests.el (glep-mode-test-run-with-fixed-time):
	Use func-arity to detect the calling convention for encode-time.

	* test/ebuild-mode-tests.el (cl-letf, cl-letf*): Enclose their
	definition in eval-when-compile.
	(ebuild-mode-test-font-lock): Call font-lock-fontify-region
	instead of font-lock-fontify-buffer. This is silent and also
	avoids the noninteractive trickery.
	* test/gentoo-newsitem-mode-tests.el (cl-letf, cl-letf*)
	(gentoo-newsitem-mode-test-font-lock): Ditto.
	(gentoo-newsitem-mode-test-run-silently): Remove.

	* test/ebuild-mode-tests.el (ebuild-mode-test-skeleton):
	Remove unnecessary ebuild-mode-test-run-silently.
	* test/gentoo-newsitem-mode-tests.el
	(gentoo-newsitem-mode-test-skeleton): Remove unnecessary
	gentoo-newsitem-mode-test-run-silently.

2024-09-28  Ulrich Müller  <ulm@gentoo.org>

	* test/ebuild-mode-tests.el:
	* test/gentoo-newsitem-mode-tests.el: Drop redundant XEmacs
	conditionals.

	* test/xemacs-test-wrapper.el (skip-unless): New function.
	(test-skipped): New error symbol.
	(ert-deftest): Handle it.

	* ebuild-mode.el (ebuild-mode-enable-bug-reference):
	New custom variable.
	(ebuild-mode-bug-regexp, ebuild-mode-bug-url-format):
	New variables.
	(ebuild-repo-mode): Conditionally enable bug-reference-prog-mode.
	* test/ebuild-mode-tests.el (ebuild-mode-test-bug-url): New test.

	* ebuild-mode.el (ebuild-repo-mode): Define the nxml-* variables
	instead of requiring nxml-mode at compile time.

2024-09-25  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh (OBSOLETE): Update.

	* test/ebuild-mode-tests.el (ebuild-mode-test-time-string):
	Run with fixed time.

	* ebuild-mode.el (ebuild-mode-arch-list): Remove ia64.

2024-09-10  Ulrich Müller  <ulm@gentoo.org>

	* test/ebuild-mode-tests.el (ebuild-mode-test-update-copyright):
	Actually run ebuild-mode-update-copyright.
